--- a/app/design/frontend/base/default/template/paymentmodule/form/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/creditcard.phtml
@@ -39,7 +39,7 @@
                                 Card number<span class="required">*</span>
                             </label>
                             <div class="input-box">
-                                <span id="mundipaggBrandImage"></span>
+                                <span id="mundipaggBrandImage" class="mundipaggBrandImage"></span>
                                 <input type="hidden" id="mundipaggBrandName" value="">
                                 <input
                                         type="text"
