:bug: Fixed interest to boleto + cc method

--- a/app/design/frontend/base/default/template/paymentmodule/form/boletocc.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/boletocc.phtml
@@ -23,6 +23,9 @@
                                         onkeydown=""
                                         value="">
                             </div>
+                            <input type="hidden"
+                                    id="mundipagg_creditcard_brand_name_boletocc"
+                                    name="payment[mundipagg_creditcard_brand_name_boletocc]">
                             <div class="input-box">
                                 <img
                                     src="https://dashboard.mundipagg.com/emb/images/brands/amex.jpg"
