:bug: Fixed interest to credit card method

--- a/app/design/frontend/base/default/template/paymentmodule/form/creditcard.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/creditcard.phtml
@@ -34,7 +34,9 @@
                                 />
                                 <br>
                             </div>
-
+                            <input type="hidden"
+                                   id="mundipagg_creditcard_brand_name"
+                                   name="payment[mundipagg_creditcard_brand_name]">
                             <label for="payment[creditCardNumber]">
                                 Card number<span class="required">*</span>
                             </label>
