--- a/app/design/frontend/base/default/template/paymentmodule/form/test.phtml
+++ b/app/design/frontend/base/default/template/paymentmodule/form/test.phtml
@@ -18,5 +18,10 @@ $structure = $this->getStructure();
     </ul>
     <script type="javascript">
 
+        initPaymentMethod('<?php echo $_code; ?>');
+
+        //cc token
+        //validações
+        //balanceamento de value
     </script>
 </fieldset>
